--- a/src/components/Ticket.css
+++ b/src/components/Ticket.css
@@ -50,6 +50,34 @@
   -webkit-line-clamp: 2;
   -webkit-box-orient: vertical;
   overflow: hidden;
+  margin-left: 0.5rem;
+  position: relative; 
+}
+
+.ticket-title-symbols {
+  display: flex;
+  align-items: center;
+}
+
+.ticket-status {
+  display: flex;
+  align-items: center;
+}
+
+.status-icon-todo {
+  width: 1rem;
+  height: 1rem;
+  color: #3B82F6;
+}
+.status-icon-in-progress {
+  width: 1rem;
+  height: 1rem;
+  color: orange;
+}
+.status-icon-backlog {
+  width: 1rem;
+  height: 1rem;
+  color: #EF4444;
 }
 
 .ticket-avail {
